--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -175,13 +175,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "sim = scaler.fit_transform(df[[\"x_sim\", \"y_sim\"]])\n",
+    "\n",
+    "# x = np.array(df.z)\n",
+    "# np.mean(x), np.std(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.31108233,  0.5003881 ],\n",
+       "       [-0.37856735,  0.05173229],\n",
+       "       [-0.37921204, -0.40888476],\n",
+       "       ...,\n",
+       "       [-0.88721012, -0.23019566],\n",
+       "       [-0.86343975,  0.00190147],\n",
+       "       [-0.77664436,  0.23248613]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -8843.1314537 ,  13138.22168963],\n",
+       "       [-10555.50006619,   1649.28936685],\n",
+       "       [-10571.85847173, -10145.93990816],\n",
+       "       ...,\n",
+       "       [-23461.83069857,  -5570.16717461],\n",
+       "       [-22858.67992929,    373.24910188],\n",
+       "       [-20656.3286029 ,   6277.93468298]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rev_sim = scaler.inverse_transform(sim)\n",
+    "rev_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x_sim</th>\n",
+       "      <th>y_sim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-8843.131454</td>\n",
+       "      <td>13138.221690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-10555.500066</td>\n",
+       "      <td>1649.289367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-10571.858472</td>\n",
+       "      <td>-10145.939908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-9149.620794</td>\n",
+       "      <td>-20618.200201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-6729.358857</td>\n",
+       "      <td>-28902.271436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>649907</th>\n",
+       "      <td>-20717.958996</td>\n",
+       "      <td>-16245.240500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>649908</th>\n",
+       "      <td>-22673.444496</td>\n",
+       "      <td>-11192.339393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>649909</th>\n",
+       "      <td>-23461.830699</td>\n",
+       "      <td>-5570.167175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>649910</th>\n",
+       "      <td>-22858.679929</td>\n",
+       "      <td>373.249102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>649911</th>\n",
+       "      <td>-20656.328603</td>\n",
+       "      <td>6277.934683</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>649912 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               x_sim         y_sim\n",
+       "0       -8843.131454  13138.221690\n",
+       "1      -10555.500066   1649.289367\n",
+       "2      -10571.858472 -10145.939908\n",
+       "3       -9149.620794 -20618.200201\n",
+       "4       -6729.358857 -28902.271436\n",
+       "...              ...           ...\n",
+       "649907 -20717.958996 -16245.240500\n",
+       "649908 -22673.444496 -11192.339393\n",
+       "649909 -23461.830699  -5570.167175\n",
+       "649910 -22858.679929    373.249102\n",
+       "649911 -20656.328603   6277.934683\n",
+       "\n",
+       "[649912 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"x_sim\", \"y_sim\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-949.71065994,  324.55719776]),\n",
+       " array([25374.05674322, 25607.45266996]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.mean_ , scaler.scale_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id        356657.040984\n",
+       "sat_id       171.482926\n",
+       "x          25391.507810\n",
+       "y          25631.511540\n",
+       "z          20652.050496\n",
+       "Vx             2.639041\n",
+       "Vy             2.597130\n",
+       "Vz             2.116245\n",
+       "x_sim      25374.076264\n",
+       "y_sim      25607.472371\n",
+       "z_sim      20667.988715\n",
+       "Vx_sim         2.637491\n",
+       "Vy_sim         2.600323\n",
+       "Vz_sim         2.113769\n",
+       "Name: std, dtype: float64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe().iloc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
